--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </title>
     <!-- Twitter Metas -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="" />
+    <meta name="twitter:site" content="https://sovereignty.one" />
     <meta
       name="twitter:title"
       content="Sovereign-T Protocol : A brief introduction"
@@ -21,7 +21,7 @@
       content="Digital autonomy begins with Self-Sovereign Identity – Sovereign-T Protocol, Where Self-Sovereign
     Identity Meets Unparalleled Security coupled with blockchain & DeFi. #SovereignT #Blockchain #SSI"
     />
-    <meta name="twitter:image" content="URL_TO_IMAGE" />
+    <meta name="twitter:image" content="https://salmon-electric-marmot-594.mypinata.cloud/ipfs/QmeHUQjPb3aoQzSGbijeCzCtX45qiXiwC5LYUQVqweK4dC" />
     <!-- Twitter Metas -->
     <!-- Facebook Metas -->
     <meta property="og:url" content="https://sovereignty.one" />
@@ -35,7 +35,7 @@
       content="Digital autonomy begins with Self-Sovereign Identity – Sovereign-T Protocol, Where Self-Sovereign
       Identity Meets Unparalleled Security coupled with blockchain & DeFi. #SovereignT #Blockchain #SSI"
     />
-    <meta property="og:image" content="URL_TO_IMAGE" />
+    <meta property="og:image" content="https://salmon-electric-marmot-594.mypinata.cloud/ipfs/QmeHUQjPb3aoQzSGbijeCzCtX45qiXiwC5LYUQVqweK4dC" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Sovereign-T Protocol" />
