--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
       content="Digital autonomy begins with Self-Sovereign Identity – Sovereign-T Protocol, Where Self-Sovereign
     Identity Meets Unparalleled Security coupled with blockchain & DeFi. #SovereignT #Blockchain #SSI"
     />
-    <meta name="twitter:image" content="https://salmon-electric-marmot-594.mypinata.cloud/ipfs/QmeHUQjPb3aoQzSGbijeCzCtX45qiXiwC5LYUQVqweK4dC" />
+    <meta
+      name="twitter:image"
+      content="https://salmon-electric-marmot-594.mypinata.cloud/ipfs/QmeHUQjPb3aoQzSGbijeCzCtX45qiXiwC5LYUQVqweK4dC"
+    />
     <!-- Twitter Metas -->
     <!-- Facebook Metas -->
     <meta property="og:url" content="https://sovereignty.one" />
@@ -35,7 +38,10 @@
       content="Digital autonomy begins with Self-Sovereign Identity – Sovereign-T Protocol, Where Self-Sovereign
       Identity Meets Unparalleled Security coupled with blockchain & DeFi. #SovereignT #Blockchain #SSI"
     />
-    <meta property="og:image" content="https://salmon-electric-marmot-594.mypinata.cloud/ipfs/QmeHUQjPb3aoQzSGbijeCzCtX45qiXiwC5LYUQVqweK4dC" />
+    <meta
+      property="og:image"
+      content="https://salmon-electric-marmot-594.mypinata.cloud/ipfs/QmeHUQjPb3aoQzSGbijeCzCtX45qiXiwC5LYUQVqweK4dC"
+    />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:site_name" content="Sovereign-T Protocol" />
@@ -112,12 +118,69 @@
         border: 1px solid #ddd;
         font-family: "Courier New", monospace;
       }
+      .d-f {
+        display: flex !important;
+      }
+      .a-i-c {
+        align-items: center !important;
+      }
+      .j-c-c {
+        justify-content: center !important;
+      }
+      .flex-wrap {
+        flex-wrap: wrap !important;
+      }
+      .g-1 {
+        gap: 2rem !important;
+      }
+      .w-2 {
+        width: 2rem !important;
+      }
+      .m-y-1 {
+        margin-top: 1rem !important;
+        margin-bottom: 1rem !important;
+      }
     </style>
   </head>
   <body>
     <header>
       <h1>Sovereign-T<sup>3</sup> Protocol : A brief introduction</h1>
     </header>
+    <div class="d-f j-c-c g-1 flex-wrap a-i-c m-y-1">
+      <a
+        href="https://linktr.ee/sovereigntyprotocol"
+        target="_blank"
+        rel="noopener noreferrer"
+        ><img src="/Image/linkTree.png" alt="" class="w-2"
+      /></a>
+      <a
+        href="https://www.reddit.com/user/sovereigntyprotocol"
+        target="_blank"
+        rel="noopener noreferrer"
+        ><img src="/Image/reddit.png" alt="" class="w-2"
+      /></a>
+      <a
+        href="https://medium.com/@SovereigntyProtocol"
+        target="_blank"
+        rel="noopener noreferrer"
+        ><img src="/Image/medium.png" alt="" class="w-2"
+      /></a>
+      <a
+        href="https://www.instagram.com/sovereigntyprotocol/"
+        target="_blank"
+        rel="noopener noreferrer"
+        ><img src="/Image/instagram.png" alt="" class="w-2"
+      /></a>
+      <a
+        href="https://t.me/sovereigntyprotocol"
+        target="_blank"
+        rel="noopener noreferrer"
+        ><img src="/Image/telegram.png" alt="" class="w-2"
+      /></a>
+      <!-- <a href="http://" target="_blank" rel="noopener noreferrer"
+        ><img src="/Image/twitter.png" alt="" class="w-2"
+      /></a> -->
+    </div>
     <p>Updated on 05.01.2024</p>
 
     <section>
