link size change

--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
         margin-top: 1rem !important;
         margin-bottom: 1rem !important;
       }
+      .w-1_75 {
+        width: 1.75rem !important;
+      }
     </style>
   </head>
   <body>
@@ -151,13 +154,13 @@
         href="https://linktr.ee/sovereigntyprotocol"
         target="_blank"
         rel="noopener noreferrer"
-        ><img src="/Image/linkTree.png" alt="" class="w-2"
+        ><img src="/Image/linkTree.png" alt="" class="w-1_75"
       /></a>
       <a
         href="https://www.reddit.com/user/sovereigntyprotocol"
         target="_blank"
         rel="noopener noreferrer"
-        ><img src="/Image/reddit.png" alt="" class="w-2"
+        ><img src="/Image/reddit.png" alt="" class="w-1_75"
       /></a>
       <a
         href="https://medium.com/@SovereigntyProtocol"
