--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
         ><img src="/Image/linkTree.png" alt="" class="w-1_75"
       /></a>
       <a
+        href="https://www.twitter.com/sovereign_t3"
+        target="_blank"
+        rel="noopener noreferrer"
+        ><img src="/Image/twitter.png" alt="" class="w-1_75"
+      /></a>
+      <a
         href="https://www.reddit.com/user/sovereigntyprotocol"
         target="_blank"
         rel="noopener noreferrer"
