--- a/index.html
+++ b/index.html
@@ -190,7 +190,10 @@
         ><img src="/Image/twitter.png" alt="" class="w-2"
       /></a> -->
     </div>
-    <p>Updated on 05.01.2024</p>
+    <div class="d-f j-c-c g-1 flex-wrap a-i-c m-y-1">
+      <a href="blog.html">Blogs & News</a>
+    </div>
+    <p>Updated on 09.01.2024</p>
 
     <section>
       <h2>Abstract</h2>
@@ -807,6 +810,9 @@
       </p>
     </section>
     <footer>
+      <div class="d-f j-c-c g-1 flex-wrap a-i-c m-y-1">
+        <a href="blog.html">Blogs & News</a>
+      </div>
       <p>&copy; Sovereign-T<sup>3</sup> Protocol</p>
     </footer>
   </body>
