--- a/blog.html
+++ b/blog.html
@@ -217,6 +217,12 @@
           Protocol</a
         >
       </li>
+      <li>
+        <a
+          href="https://medium.com/@SovereigntyProtocol/self-sovereign-identity-and-the-sovereign-t-protocol-a-solution-to-the-modern-privacy-paradox-3253a78a4971"
+          >Self-Sovereign Identity and the Sovereign-T Protocol: A Solution to the Modern Privacy Paradox</a
+        >
+      </li>
     </ol>
 
     <footer>
